--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,10 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      
+
       <a href="/" class="btn">Top</a>
       <a href="/about" class="btn">About</a>
+      <a href="/books" class="btn">Books</a>
       <a href="/posts" class="btn">Posts</a>
     </section>
 
